Correção Pagina Duvidas
Solicitada pela Pricila

--- a/app/Resources/views/default/duvidas.html.twig
+++ b/app/Resources/views/default/duvidas.html.twig
@@ -1,5 +1,140 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    aew
+    <div class="container">
+    <div class="row">
+      <div class ="titles-box" >
+        <h1 class = "titles-top">Dúvidas</h1>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col s12">
+          <div class="card-panel">
+            <div class="card-content">
+                 <ul class="collapsible" data-collapsible="accordion">
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>O que é a BidTravel.com.br? </div>
+                    <div class="collapsible-body"><p>A BidTravel.com.br é um leilão online que possui parceria com os maiores companhias aéreas do país e do mundo, disponibilizando passagem aérea para diversos locais no Brasil e fora dele para você de forma bem divertida. Além de outros benefícios, como; cupons de desconto variados, descontos para aquisição de passagem aérea, entre outros. O intuito da BidTravel.com.br é ser o site de sua escolha na hora de escolher uma passagem aérea. E nossa filosofia é prezar sempre o respeito, o compromisso e a segurança com um grande toque de diversão. </p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como funciona a BidTravel.com.br?</div>
+                    <div class="collapsible-body"><p>1° - Cadastro: Realize o seu cadastro no site, informando seus dados pessoais.<br>
+                      2º - Adquira Lances: Realize a aquisição de lances comprando-os via cartão de crédito, cartão de débito, transferência eletrônica, boleto bancário ou realize a transferência dos seus pontos acumulados no cartão de crédito dos bancos Bradesco, HSBC e Santander.<br>
+                      3° - Divirta-se e dê seus lances: Escolha o seu destino e clique no botão “LANCE” para poder habilitar a sua participação no leilão, depois desse de quantos lances você desejar, todos os lances serão descontados do seu saldo disponível de lances. A cada lance dado o valor da passagem aérea irá aumentar em R$ 0,01. Assim que este valor atingir o valor de custo da passagem será disparado o cronometro regressivo, a partir deste momento somente os usuários habilitados é que poderão dar lances. Cada leilão terá um cronômetro funcionando regressivamente. E você pode acompanhar essa contagem e participar dando seus lances, porém, não temos como prever quando o cronômetro irá zerar, pois a contagem irá reiniciar a cada novo lance. Se você for o último a dar um lance quando o cronômetro zerar, você será o ganhador da passagem aérea. Mas se outros usuários derem um lance depois de você, a contagem regressiva terá início novamente. <br>
+                      4° - Entrega da Passagem: O usuário que deu o último lance receberá um e-mail. Ele deverá clicar no link deste e-mail e será redirecionado ao site para escolher a agencia de viagem que irá emitir o seu bilhete. Ele poderá escolher uma agencia parceira do site ou indicar alguma. Ele deverá aguardar 7 dias úteis para saber se a agencia de viagem indicada virou ou não parceira da BidTravel.com.br.<br>
+                      5º - Cupons de Desconto: Após adquirir lances, você pode aproveitar de forma ilimitada, todos os cupons de descontos oferecidos na página de Cupom do site. Ao selecionar o desconto desejado, basta clicar em “Resgatar Cupom” que surgirá uma breve explicação sobre a promoção, o respectivo código e o link para você utilizá-lo. Os cupons possuem período de vigência e condições específicas de uso.<br>
+                      6º - Compra de Passagem: Os 10 usuários que mais lances deram no Leilão mas não foram o vencedor, também receberão um e-mail onde a BidTravel.com.br oferecerá a passagem aérea que estava sendo leiloada com desconto. Eles terão 24 horas para optar em adquirir ou não a passagem aérea, clicando no link enviado no e-mail.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como participar do leilão de uma passagem aérea?</div>
+                    <div class="collapsible-body"><p>Escolha a passagem aérea que deseja adquirir e comece a dar seus lances.
+                      O número de lances é ilimitado por leilão.
+                      O primeiro LANCE que o usuário der será o LANCE de habilitação da sua participação ao leilão, ele deverá ser dado antes que o CRONOMETRO REGRESSIVO seja iniciado, assim como os demais lances este também será descontado do seu saldo de lances disponíveis. Após o inicio da contagem regressiva somente os usuários habilitados poderão participar do leilão.
+                      Cada LANCE dado incrementa o VALOR DO PRODUTO em R$ 0,01 (Um Centavo).
+                      Se você for o último usuário a dar lance e o cronômetro concluir a contagem, você será o ganhador da passagem aérea do leilão. Mas se outros usuários derem lances depois de você, à contagem regressiva reiniciará.
+                      Características das passagens aéreas
+                      A passagem aérea será sempre de ida e volta e sem escalas ou conexões até o destino escolhido.
+                      Com exceção dos destinos que não possuem voos diretos.
+                      A data e horário da passagem aérea de ida e volta deverá ser definida diretamente com a agencia de viagem que o usuário selecionar para emissão do bilhete.</p></div>
+                  </li>
+                   <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como adquirir lances para participar dos leilões?</div>
+                    <div class="collapsible-body"><p>O usuário poderá adquirir os lances de duas maneiras:
+                      Compra-los via cartão de crédito, cartão de débito, transferência eletrônica ou boleto bancário, o valor de cada lance é R$ XX,XX. Esta compra deverá ser realizada diretamente no site www.bidtravel.com.br.  VER VALOR DO LANCE
+                      Através de transferência de pontos acumulados no cartão de crédito, dos bancos Bradesco, HSBC e Santander. Esta transferência poderá ser realizada diretamente no site dos bancos ou pelo site www.bidtravel.com.br. Cada ponto a ser transferido será convertido em um lance. VER CONVERSÃO</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>O que é "usuário"? Que nome posso usar? </div>
+                    <div class="collapsible-body"><p>O nome de usuário é o “apelido” que você usará para acessar sua conta na BidTravel.com.br e também aparecerá quando você der lances em nossas passagens aéreas. O nome de usuário não poderá ser obsceno, vulgar, agressivo, preconceituoso, ameaçador ou capaz de induzir os demais usuários ao erro, pois se assim for, o usuário poderá ter o seu cadastro anulado pela equipe do site, sem a devolução de lances adquiridos ou pagamento de qualquer tipo de indenização.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Esqueci minha senha e nome de usuário, e agora?  </div>
+                    <div class="collapsible-body"><p>Caso tenha esquecido sua senha, clique aqui ou em “Esqueci minha senha”, na opção “Entrar”. Lá você deverá colocar o seu e-mail cadastrado e, após clicar em “Enviar”.
+                      Uma nova senha de acesso, gerada pela BidTravel.com.br, será enviada para o seu e-mail. Ao tentar se logar, por favor pedimos para que verifique se está digitando seu usuário corretamente.
+                      Caso não se lembre do seu nome de usuário, você poderá logar utilizando seu e-mail. Caso não saiba qual seu e-mail de cadastro, clique aqui para solicitar ao suporte.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como alterar meu cadastro? </div>
+                    <div class="collapsible-body"><p>Para alterar o seu cadastro, você deve SE LOGAR > CLICAR NO SEU NOME DE USUÁRIO > MINHA CONTA > MEUS DADOS > ATUALIZAR
+					Lembrando que, após a realização de seu cadastro, não será permitido alterar o nome de usuário/apelido/login.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como visualizar o meu saldo de lances? </div>
+                    <div class="collapsible-body"><p>Para visualizar o seu saldo de lances, você deverá fazer o login na BidTravel.com.br, clicar no seu nome de usuário, em seguida em “Histórico de Lances”.
+					Esta opção mostrará todas as informações dos lances adquiridos, data, quantidade, forma de aquisição, entre outras, e também a quantidade de lances já dados nos leilões que você participou, no final mostrará o seu saldo de lances disponível.
+					</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como saber informações de lances dados em um determinado leilão?</div>
+                    <div class="collapsible-body"><p>Você precisará estar logado no site BidTravel.com.br, em seguida clicar na opção “Meus Arremates”.
+					Neste momento serão demonstrados todos os lances dados para um determinado leilão e se você foi o vencedor ou não.
+					Onde posso acompanhar as minhas passagens aéreas adquiridas?
+					Para verificar as aquisições que você efetuou, basta fazer o login, clicar no seu nome de usuário e clicar no link “Meus Produtos”.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como encerrar a minha conta? </div>
+                    <div class="collapsible-body"><p>Você deverá fazer o login na BidTravel.com.br, clicar no seu nome de usuário, em seguida em “Encerrar Conta”.
+					Outra forma de encerrar sua conta é enviando um e-mail para sac@bidtravel.com.br, informando os seguintes dados: E-mail de cadastro / Usuário / CPF.
+					Pedimos que informe o motivo de seu cancelamento para que fique registrado em nosso sistema.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Quando termina o tempo?</div>
+                    <div class="collapsible-body"><p>Em cada passagem aérea disponível, terá um cronômetro contando regressivamente 2 minutos. Quando o mesmo chegar a 00:01, o servidor irá conferir se aquele foi o último lance dado, até chegar a zero. Caso tenha sido o último lance, o usuário será o ganhador do leilão. Caso o servidor verifique que entre 00:01 e 00:00 houve algum outro lance, o cronômetro continuará ativo e voltará ao início da contagem regressiva até que um usuário dê a última oferta.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como pagar por minha passagem aérea? </div>
+                    <div class="collapsible-body"><p>Se você participou de um leilão e foi um dos 10 usuários que mais lances deram então você poderá comprar a passagem aérea que estava sendo leiloada com desconto.
+                    Você irá receber um e-mail com a oferta da passagem aérea, deverá clicar no link enviado no e-mail. Você será redirecionado ao site da BidTravel.com.br onde estará disponível todas as formas de pagamento.
+                    O prazo para a realização do pagamento é de até 24 horas. Após o vencimento do prazo, a oferta irá expirar de sua conta. Caso tenha dificuldades para realizar o pagamento, entre em contato conosco pelo SAC através do e-mail: sac@bidtravel.com.br.</p></div>
+                  </li>
+                   <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como utilizar os cupons?</div>
+                    <div class="collapsible-body"><p>Ao clicar em “Resgatar Cupom”, abrirá uma janela com as informações do cupom e o código do mesmo. Em alguns casos, você será direcionado à página da loja parceira com o devido desconto já disponível, através de um link; ou deverá imprimir um voucher que deve ser apresentado na loja ou estabelecimento para garantir seu desconto; ou deverá colocar o código de desconto (digitado e não copiado e colado) num local específico no momento de conclusão da compra no site da loja parceria.
+					Lembramos que os cupons possuem período de vigência e condições específicas de uso, conforme acertado previamente pelo parceiro.</p></div>
+                  </li>
+                   <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Como funciona a proteção anti-spam? </div>
+                    <div class="collapsible-body"><p>Os servidores de e-mails criam mecanismos para tentar identificar mensagens potencialmente consideradas SPAM.
+                      Os e-mails enviados por destinatários autorizados por você são recebidos diretamente na sua "Caixa de Entrada" e pelo seu programa cliente (ex. Outlook).Os demais e-mails, potencialmente considerados SPAM, costumam ser movidos para uma pasta criada especificamente para este fim pelo seu servidor de e-mails. Esta pasta fica apenas no seu webmail e pode ter os mais variados nomes:
+                      • HOTMAIL / MSN - Lixo Eletrônico ou Junk
+                      • YAHOO - Em massa
+                      • GMAIL / IG / TERRA - Spam
+                      • UOL / BOL - Quarentena
+                      Ou seja, os usuários de POP3 que baixam os e-mails diretamente em seu computador (através de programas como o Outlook, por exemplo) só poderão visualizar os e-mails considerados SPAM acessando seu Webmail.
+                      Como os mecanismos de identificação de e-mails não são infalíveis, algumas mensagens desejadas podem ser equivocadamente movidas para a pasta de SPAMs e até apagadas depois de um certo período de tempo.
+                      Dessa maneira, se alguma mensagem for filtrada erroneamente, é necessário resgatá-la na pasta destinada aos SPAMs do seu webmail e autorizar o seu remetente.</p></div>
+                  </li>
+                    <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Qual a política de privacidade da BidTravel.com.br? </div>
+                    <div class="collapsible-body"><p>A BidTravel.com.br garante a privacidade e a segurança de seus usuários durante toda a navegação do site. Os dados cadastrados são armazenados em nosso banco de dados com o objetivo de melhorar o nosso relacionamento por meio de e-mail, mala direta e outras formas de interação. Para isso utilizamos cookies e informações de sua navegação (sessão do browser), com o intuito de conhecer o público e aperfeiçoar sempre nossos produtos e serviços, garantindo as melhores promoções e benefícios para você. Durante todo o processo, suas informações são mantidas em sigilo absoluto. A BidTravel.com.br atua com as mais modernas práticas relativas a meios de pagamento e possui parceiros líderes nestes segmentos. O número e demais dados de seu cartão de crédito não são armazenados em nosso banco de dados nem durante, nem após a conclusão da compra. Para sua segurança, não aconselhamos a divulgação de sua senha na BidTravel.com.br a terceiros. </p></div>
+                  </li>
+                    <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>O que é Site Blindado? </div>
+                    <div class="collapsible-body"><p>A Blindagem da BidTravel.com.br do Site Blindado S/A fornece auditoria de segurança de rede automatizada, combinada com um interativo portal de gerenciamento. Funciona monitorando as vulnerabilidades dos servidores e website 24 horas por dia.
+					A BidTravel.com.br assim como os outros websites analisados pela Blindagem de Sites passa por um ciclo completo de proteção para poder receber a certificação de segurança do Site Blindado. Passado este processo, e não havendo vulnerabilidades de nível 3, 4 ou 5, é dada a permissão de inclusão do Selo Site Blindado no site, como temos aqui.</p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>Quais são os requerimentos mínimos recomendados para participar da BidTravel.com.br ?</div>
+                    <div class="collapsible-body"><p>Ter mais de 18 anos, ou entre 16 e 18, assistido por um responsável. A BidTravel.com.br busca fornecer a melhor estrutura para possibilitar o bom funcionamento do site, mas para isso é necessário que a sua conexão com a internet esteja em boas condições. Para otimizar a performance, recomendamos que não abra outros aplicativos durante a utilização dos serviços do site. Além disso, o Umbarato.com possui melhor desempenho nos navegadores Google Chrome e Firefox. </p></div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header"><i class="material-icons green-text text-darken-3">info</i>O que é spam? </div>
+                    <div class="collapsible-body"><p>SPAM é o termo usado para referir-se aos e-mails não solicitados, que geralmente são enviados para um grande número de pessoas.  </p></div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </div>
+    </div>
+  </div>
+{% endblock %}
+{% block javascripts %}
+    {% javascripts
+    '@AppBundle/Resources/js/jquery-2.1.1.min.js'
+    '@AppBundle/Resources/js/materialize.js'
+    '@AppBundle/Resources/js/init.js'
+    '@AppBundle/Resources/js/swiper.min.js'
+    '@AppBundle/Resources/js/como-funciona.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
