--- a/src/LeilaoBundle/Resources/views/leilao/index.html.twig
+++ b/src/LeilaoBundle/Resources/views/leilao/index.html.twig
@@ -12,7 +12,7 @@
             <div class="col s12">
                 <ul class="tabs">
                     <li class="tab col s3"><a class="active grey-text" href="#open">Abertos</a></li>
-                    <li class="tab col s3"><a class="grey-text" href="#next">Proxímos</a></li>
+                    <li class="tab col s3"><a class="grey-text" href="#next">Próximos</a></li>
                     <li class="tab col s3"><a class="grey-text" href="#close">Encerrados</a></li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col l4 s12 m6">
                         <div class="card small">
-                            <div class="row">
+                            <div class="card-image">
                                 <div class="col s8">
                                     <span class="grey-text"> De R$ {{ passagem.valor }} </span>
                                     <br>
@@ -78,7 +78,7 @@
                                     <br>
                                     <span class="grey-text"> Economia de </span><span class="green-text">R$ <b class="valorEconomia">450,20 </b></span>
                                 </div>
-                                <div class="col s2">
+                                <div class="col s4 valign center">
                                     <p></p>
                                     <span class="discount-txt green-text"> <b class="desconto">68</b>%</span>
                                     <span class="leilao-home-txt-2 green-text center"> <b>DESCONTO </b></span>
