--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -18,6 +18,7 @@
     </head>
     <body>
         <ul>
+            <li><a href="{{ url('admin_imagem_index') }}">Banner Home</a></li>
             <li><a href="{{ url('admin_passagem_index') }}">Passagem</a></li>
             <li><a href="{{ url('admin_leilao_index') }}">Leilões</a></li>
             <li><a href="{{ url('admin_cidade_index') }}">Cidade</a></li>
